--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,12 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --base-font-size: 16px;
+  font-size: var(--base-font-size);
+
+  &.contrast {
+    filter: grayscale(1);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
